# dmt-bayesian-hierarchical

./: .gitignore  README.md  citation.cff  pyproject.toml
.github/workflows/: ci.yaml
configs/: default.yaml  fast.yaml
data/: README.md
notebooks/: 01_analysis_walkthrough.ipynb  README.md
scripts/: make_model_diagram.py
src/dmt_bayes/: cli.py  data_prep.py  download.py  fit.py  model.py  report.py  summarize.py
src/dmt_bayes.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_smoke.py
